[gd_scene load_steps=8 format=3 uid="uid://c257g577mvpbw"]

[ext_resource type="Script" path="res://scripts/form.gd" id="1_i4d1v"]
[ext_resource type="Texture2D" uid="uid://dmi3pc8kq3he3" path="res://assets/UI/Sprite sheets/Setting menu.png" id="1_i13f6"]
[ext_resource type="FontFile" uid="uid://cotm02uvrmm48" path="res://assets/UI/fonts/Jersey10-Regular.ttf" id="2_v1dmw"]
[ext_resource type="Texture2D" uid="uid://djialooc57oby" path="res://assets/UI/Sprite sheets/UI Big Play Button.png" id="4_dfvw2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fpyfw"]
atlas = ExtResource("1_i13f6")
region = Rect2(138.667, 10.9997, 107.192, 123.809)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi4mf"]
atlas = ExtResource("4_dfvw2")
region = Rect2(2.11051, 1.09323, 92.1905, 27.4022)

[sub_resource type="AtlasTexture" id="AtlasTexture_rstd2"]
atlas = ExtResource("4_dfvw2")
region = Rect2(98.1246, 3.21743, 91.7657, 26.1277)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i4d1v")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.5
offset_top = -232.5
offset_right = 211.5
offset_bottom = 232.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_fpyfw")

[node name="RichTextLabel3" type="RichTextLabel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 25.5
offset_top = 149.5
offset_right = -256.5
offset_bottom = 185.5
grow_horizontal = 2
theme_override_colors/default_color = Color(0.666819, 0.474342, 0.348791, 1)
theme_override_fonts/normal_font = ExtResource("2_v1dmw")
theme_override_font_sizes/normal_font_size = 32
text = "Age"

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 28.0
offset_top = 97.0
offset_right = -254.0
offset_bottom = 133.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0.666819, 0.474342, 0.348791, 1)
theme_override_fonts/normal_font = ExtResource("2_v1dmw")
theme_override_font_sizes/normal_font_size = 32
text = "User Name"

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 105.5
offset_top = 31.5
offset_right = -93.5
offset_bottom = 87.5
grow_horizontal = 2
theme_override_colors/default_color = Color(0.666819, 0.474342, 0.348791, 1)
theme_override_fonts/normal_font = ExtResource("2_v1dmw")
theme_override_font_sizes/normal_font_size = 50
text = "User Details"

[node name="LineEdit" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 209.5
offset_top = 100.5
offset_right = 376.5
offset_bottom = 131.5
placeholder_text = "Username"
clear_button_enabled = true

[node name="LineEdit2" type="LineEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 209.5
offset_top = 148.5
offset_right = 376.5
offset_bottom = 179.5
placeholder_text = "Age"
clear_button_enabled = true

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 38.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = SubResource("AtlasTexture_vi4mf")
texture_pressed = SubResource("AtlasTexture_rstd2")

[node name="Label" type="Label" parent="TextureRect/TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -17.5
offset_right = 51.0
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.666819, 0.474342, 0.348791, 1)
theme_override_fonts/font = ExtResource("2_v1dmw")
theme_override_font_sizes/font_size = 30
text = "SUBMIT"

[node name="RichTextLabel4" type="RichTextLabel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.5
offset_top = 119.5
offset_right = 109.5
offset_bottom = 159.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.666819, 0.474342, 0.348791, 1)
theme_override_fonts/normal_font = ExtResource("2_v1dmw")
theme_override_font_sizes/normal_font_size = 30

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="text_submitted" from="TextureRect/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="TextureRect/LineEdit2" to="." method="_on_line_edit_2_text_submitted"]
[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
